--- a/lang/main-id.json
+++ b/lang/main-id.json
@@ -667,7 +667,7 @@
         "raiseHand": "Raise / Lower your hand",
         "raiseYourHand": "Raise your hand",
         "Settings": "Settings",
-        "sharedvideo": "Share a YouTube video",
+        "sharedvideo": "Livestream presentation mode",
         "shareRoom": "Invite someone",
         "shortcuts": "View shortcuts",
         "speakerStats": "Speaker stats",
@@ -675,7 +675,7 @@
         "startSubtitles": "Start subtitles",
         "stopScreenSharing": "Stop screen sharing",
         "stopSubtitles": "Stop subtitles",
-        "stopSharedVideo": "Stop YouTube video",
+        "stopSharedVideo": "Video conferencing mode",
         "talkWhileMutedPopup": "Trying to speak? You are muted.",
         "tileViewToggle": "Toggle tile view",
         "toggleCamera": "Toggle camera",
