--- a/lang/main.json
+++ b/lang/main.json
@@ -743,7 +743,7 @@
         "raiseYourHand": "Raise your hand",
         "security": "Security options",
         "Settings": "Settings",
-        "sharedvideo": "Share a YouTube video",
+        "sharedvideo": "Livestream presentation mode",
         "shareRoom": "Invite someone",
         "shortcuts": "View shortcuts",
         "speakerStats": "Speaker stats",
@@ -751,7 +751,7 @@
         "startSubtitles": "Start subtitles",
         "stopScreenSharing": "Stop screen sharing",
         "stopSubtitles": "Stop subtitles",
-        "stopSharedVideo": "Stop YouTube video",
+        "stopSharedVideo": "Video conferencing mode",
         "talkWhileMutedPopup": "Trying to speak? You are muted.",
         "tileViewToggle": "Toggle tile view",
         "toggleCamera": "Toggle camera",
